--- a/src/index.html
+++ b/src/index.html
@@ -2,45 +2,96 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title><%= htmlWebpackPlugin.options.title %></title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+  <meta name="HandheldFriendly" content="true" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
-  <!-- Welcome page -->
-  <div id="welcome-screen" class="fullscreen-center hidden">
-    <h2>Medicine reminder</h2>
-    <p>Automatically add reminders to Google Calendar for when medicine expires by scanning the data matrix</p>
-    <button class="continue-button theme-button">Continue</button>
-  </div>
+  <div id="onboard">
+    <!-- Welcome page -->
+    <div id="welcome-screen" class="fullscreen-center hidden">
+      <img class="logo" src="<%= require('../logo.png') %>" />
+      <h2>Medicine reminder</h2>
+      <p>Automatically add reminders to Google Calendar for when medicine expires by scanning the data matrix.</p>
+      <button class="continue-button theme-button">Continue</button>
+    </div>
+  
+    <!-- Install page -->
+    <div id="install-screen" class="fullscreen-center hidden">
+      <h2>Add to homescreen</h2>
+      <p>Install the app by adding it to your homescreen.</p>
+      <ol>
+        <li>
+          Press
+          <div class="tag">
+            Share
+            <span class="material-symbols-outlined">
+              ios_share
+            </span>
+          </div>
+        </li>
+        <li>
+          Press
+          <div class="tag">
+            Add to homescreen
+            <span class="material-symbols-outlined">
+              add_box
+            </span>
+          </div>
+        </li>
+        <li>Close this tab and open the app on your homescreen</li>
+      </ol>
+  
+      <button class="secondary-button skip-button">Skip</button>
+      <button class="secondary-button back-button">
+        <span class="material-symbols-outlined">arrow_back_ios</span>
+        Back
+      </button>
+    </div>
+  
+    <!-- Request camera permission page -->
+    <div id="camera-request-screen" class="fullscreen-center hidden">
+      <h2>Permissions</h2>
+      <p>Allow camera permissions to use the scanner.</p>
+      <video playsinline autoplay muted class="preview-video"></video>
+      <button class="request-button theme-button">Allow camera</button>
+      <button class="continue-button theme-button hidden">Continue</button>
+  
+      <button class="secondary-button skip-button">Skip</button>
+      <button class="secondary-button back-button">Back</button>
+    </div>
+  
+    <!-- Login page -->
+    <div id="login-screen" class="fullscreen-center hidden">
+      <img width="200" src="<%= require('./assets/calendar.svg') %>"></img>
+      <h2>Sync your calendar</h2>
+      <p>Sign in with Google to add your reminders to your Google Calendar.</p>
+      <button id="authorize_button" class="theme-button">Sign in with Google</button>
+      <button id="signout_button" class="primary-button">Sign Out</button>
+  
+      <button class="secondary-button skip-button">Skip</button>
+      <button class="secondary-button back-button">Back</button>
+    </div>
 
-  <!-- Request camera permission page -->
-  <div id="camera-request-screen" class="fullscreen-center hidden">
-    <h2>Permissions</h2>
-    <p>Allow camera permissions to use the scanner.</p>
-    <video playsinline autoplay muted class="preview-video"></video>
-    <button class="request-button theme-button">Allow camera</button>
-    <button class="continue-button theme-button hidden">Continue</button>
-
-    <button class="secondary-button skip-button">Skip</button>
-    <button class="secondary-button back-button">Back</button>
-  </div>
-
-  <!-- Login page -->
-  <div id="login-screen" class="fullscreen-center hidden">
-    <img width="200" src="<%= require('./assets/calendar.svg') %>"></img>
-    <h2>Sync your calendar</h2>
-    <p>Sign in with Google to add your reminders to your Google Calendar.</p>
-    <button id="authorize_button" class="theme-button">Sign in with Google</button>
-    <button id="signout_button" class="primary-button">Sign Out</button>
-
-    <button class="secondary-button skip-button">Skip</button>
-    <button class="secondary-button back-button">Back</button>
+    <!-- Calendar selection page -->
+    <div id="calendar-screen" class="fullscreen-center hidden">
+      <h2>Select a calendar</h2>
+      <p>Choose which calendar reminders will be added to.</p>
+      <div class="calendar-list"></div>
+      <button class="continue-button theme-button">Continue</button>
+  
+      <button class="secondary-button skip-button">Skip</button>
+      <button class="secondary-button back-button">Back</button>
+    </div>
   </div>
 
   <!-- Scanner -->
@@ -52,6 +103,32 @@
         <div class="corner"></div>
         <div class="corner"></div>
         <div class="corner"></div>
+      </div>
+    </div>
+
+    <button class="icon-button filled secondary-button restart-camera">
+      Refresh camera
+      <span class="material-symbols-outlined">
+        replace_video
+      </span>
+    </button>
+
+    <div class="info-overlay">
+      <div class="header">
+        <h3>Reminders</h3>
+
+        <button class="refresh secondary-button icon-button">
+          <span class="material-symbols-outlined">
+            refresh
+          </span>
+        </button>
+      </div>
+      <div class="body">
+        <div class="list-header">
+          <span>Expires</span>
+          <span>Renew in</span>
+        </div>
+        <div class="all-reminders"></div>
       </div>
     </div>
 
@@ -75,6 +152,15 @@
   <!-- Loader -->
   <div id="loader" class="fullscreen-center hidden">
     <div class="spinner"></div>
+  </div>
+
+  <!-- Application error -->
+  <div id="app-error" class="fullscreen-center hidden">
+    <h2>Application error</h2>
+    <p>There was a problem with the application</p>
+    <p class="error-label"></p>
+
+    <button onclick="window.location.reload()" class="primary-button">Reload page</button>
   </div>
 
   <!-- Toast -->
